# FactorAI

./: .env.development  .env.example  .env.production  .gitignore  ANALYSIS_FIX_SUMMARY.md  FINAL_FIX_VERIFICATION.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  MARKET_HEAT_ISSUES.md  Makefile  PROGRESS_CALLBACK_FIX.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_MARKET_HEAT.md  README_SIMPLE_PROGRESS.md  READY_TO_RELEASE.md  SENTIMENT_VERIFICATION_002837.md  STOCK_NAME_DURATION_FIX.md  STREAMLIT_CLEANUP_SUMMARY.md  VERSION  authing_callback.html  check_analysis.py  check_data_simple.py  create_test_analysis_data.py  debug_authing.py  debug_progress.py  debug_token_exchange.py  diagnose_akshare_connection.py  diagnose_authing_user_info.py  docker-compose.certbot.yml  docker-compose.dev.yml  docker-compose.ghcr.yml  docker-compose.https.yml  docker-compose.prod.yml  docker-compose.yml  fix_analysis_data.py  fix_duplicate_analysis.py  fix_server_duplicate.py  fixed_analysis_function.py  (+59 more)
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  analysis_deduplicator.py  check_analysis.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tradingagents_server.py
backend/app/: config.py  dependencies.py  main.py  middleware.py
backend/core/: auth.py  database.py  exceptions.py  init_db.py  security.py  task_queue.py  websocket_manager.py
backend/legacy_backup_20250930_113657/: README.md
backend/models/: analysis.py  config.py  user.py
backend/scripts/: change_admin_password.py  check_analysis_data.py  fix_analysis_timestamps.py  manage_db.py  (+1 more)
(+448 files in other folders)
